Fixed horizontal scroll

--- a/src/css/Homepage.module.css
+++ b/src/css/Homepage.module.css
@@ -8,7 +8,8 @@
   font-family: 'Montserrat', sans-serif;
   background-color: rgb(35,31,32);
   color: black;
-  width: 100vw;
+  max-width: 100%;
+  min-width: 100%;
   overflow: hidden;
 }
 
