--- a/src/css/NavigationBar.module.css
+++ b/src/css/NavigationBar.module.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: center;
     max-width: 100%;
+    min-width: 100%;
     background-color: rgb(30,26,27);
     color: white;
     font-family: din-condensed, sans-serif;
