--- a/src/css/Project.module.css
+++ b/src/css/Project.module.css
@@ -4,7 +4,7 @@
   padding: 0;
   display: flex;
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: fit-content;
   overflow: hidden;
   font-family: din-condensed, sans-serif;
@@ -132,13 +132,13 @@
 
 @media (max-aspect-ratio: 1/1) {
   .Banner{
-    width: 100vw;
-    height: 100vw;
+    width: 100%;
+    height: 100%;
   }
   .image{
     margin: auto;
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100vw;
     z-index: 1;
   }
